Cyberduck
http://cyberduck.io/

Changelog. Last modified: $Date$

5.0.9 [https://trac.cyberduck.io/milestone/5.0.9]
- [Feature] Allow silent application update in background (Mac)
- [Feature] Display in-progress multipart uploads in browser (S3)
- [Bugfix] Allow to select encryption keys from KMS different from default us-east-1 region (S3) (#9617)

5.0.8 [https://trac.cyberduck.io/milestone/5.0.8]
- [Feature] Register protocol handler for irods:// (#9614)
- [Bugfix] Listing directory failure on folder with ~ in path (S3) (#9611)

5.0.7 [https://trac.cyberduck.io/milestone/5.0.7]
- [Bugfix] Missing upload notification after editing file (Mac) (#9596)
- [Bugfix] Stale entries in directory cache when deleting folder (#9608)

5.0.6 [https://trac.cyberduck.io/milestone/5.0.6]
- [Feature] Signed application executable (Windows)

5.0.5 [https://trac.cyberduck.io/milestone/5.0.5]
- [Feature] Set modification date in metadata for uploads (Backblaze B2)

5.0.4 [https://trac.cyberduck.io/milestone/5.0.4]
- [Bugfix] Allow authentication with client certificate for empty issuer list from server (TLS)

5.0.3 [https://trac.cyberduck.io/milestone/5.0.3]
- [Feature] Deleting multiple files concurrently (#9585)

5.0.2 [https://trac.cyberduck.io/milestone/5.0.2]
- [Bugfix] Fail to list directory with equals symbol in path (S3) (#9574)
- [Bugfix] Failure to launch program (CLI Linux) (#9586)

5.0.1 [https://trac.cyberduck.io/milestone/5.0.1]
- [Feature] Support for hubiC (OVH) (OpenStack Swift) (#7764)
- [Bugfix] Support authenticating with multiple accounts (Google Drive) (#9567)
- [Bugfix] Copying files using multipart API (S3) (#9578)

5.0 [https://trac.cyberduck.io/milestone/5.0]
- [Feature] Updated user interface; new monochrome toolbar icons (Mac)
- [Feature] Support for Google Drive (#6976)
- [Feature] Support for Spectra BlackPearl Deep Storage Gateway (Spectra S3)
- [Feature] Option to use AWS KMS–Managed Keys (SSE-KMS) for server side encryption (S3)