@@ -31,6 +31,22 @@
 </p>
 
 <p>
+    <a href="https://trac.cyberduck.io/milestone/5.1"><strong>Version 5.1</strong></a>
+</p>
+<ul>
+    <li>[Feature] Allow silent application update in background (Mac)</li>
+    <li>[Feature] Display in-progress multipart uploads in browser (S3)</li>
+    <li>[Bugfix] Allow to select encryption keys from KMS different from default us-east-1 region (S3) (<a
+            href="https://trac.cyberduck.io/ticket/9617">#9617</a>)
+    </li>
+    <li>[Bugfix] Uncomfirmed reads are unbounded (SFTP) (<a
+            href="https://trac.cyberduck.io/ticket/9603">#9603</a>)
+    </li>
+    <li>[Bugfix] Mismatch for MD5 checksum when downloading large object (OpenStack Swift) (<a
+            href="https://trac.cyberduck.io/ticket/8861">#8861</a>)
+    </li>
+</ul>
+<p>
     <a href="https://trac.cyberduck.io/milestone/5.0.8"><strong>Version 5.0.8</strong></a>
 </p>
 <ul>
